<resources>
    <string name="app_name">Taller2</string>
    <string name="action_settings">Settings</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="placa">Placa</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string name="precio">Precio</string>
    <string name="digiteLaPlaca">Digite la placa</string>
    <string name="digiteElPrecio">Digite el precio de auto</string>
    <string name="kia">Kia</string>
    <string name="chevrolet">Chevrolet</string>
    <string name="mazda">Mazda</string>
    <string name="dosmilDieciOcho">2018</string>
    <string name="dosmilDieciSiete">2017</string>
    <string name="dosmilDieciSeis">2016</string>
    <string name="azul">Azul</string>
    <string name="negro">Negro</string>
    <string name="blanco">Blanco</string>
    <string name="error1">No puede dejar campos vacios</string>

    <string-array name="marca">
        <item>@string/mazda</item>
        <item>@string/chevrolet</item>
        <item>@string/kia</item>
    </string-array>
    <string-array name="modelo">
        <item>@string/dosmilDieciOcho</item>
        <item>@string/dosmilDieciSiete</item>
        <item>@string/dosmilDieciSeis</item>
    </string-array>
    <string-array name="color">
        <item>@string/azul</item>
        <item>@string/negro</item>
        <item>@string/blanco</item>
    </string-array>
    <string name="mensaje_guardado">Carro Guardado Exitosamente</string>
</resources>
